 * Add program optimization.
 * Move VM into library.

Now
 * Remove check for equality in mutation and crossover because it can break good ADF.
 * Fix DIR_DIFF status calculating.
 * Fix evalation at end of circles.
 * Use elitism and tournament selection.
 * Change move format from "( CODE DIRECTION )" to "( CODE . DIRECTION )"
 * Remove ST_STATIC_CHECK.
 * Move run status into CurrentState.

Version 0.0.0.8 2010-12-05
 * Add support for current state.
 * Fix for better individuals.
 * Set maximum heap size to 196 blocks.
 * Refuse get Object from WeakObject.
 * Set maximum of object to calculate stack in Environment::Eval.
 * Add --enable-static to compile functions statically to avoid stack corruption.
 * Speedup output objects with setted width.
 * Set maximum stack depth in Environment::Eval.
 * Add test for infinity recursion.
 * Add Ackermann function for tests.
 * Use stack instead recursive check for equality.
 * More strong mutation.
 * Show more information about evolution.
 * Avoiding double individual.
 * Speedup comparing objects.
 * Dump objects for viewing them in gdb.

Version 0.0.0.7 2010-12-01
 * Make GP::CheckForParam more strict.
 * Add static check with ERROR in memory and world.
 * Fix IF with ERROR condition.
 * Fix bug with loading functions.
 * Fix bug with loading individual.
 * Change memory in static check from ERROR to NIL to test analize of world.

Version 0.0.0.6 2010-11-10
 * Fix wrong symbols in reduced output object.
 * Support for saving and loading best individual.
 * Add IF and EVAL type checking as FUNC.
 * Add QUOTE? for QUOTE type ckecking.
 * Change probability of any FUNC choosing.
 * Fix error in VM::Environment::Eval with LIST type checking.

Version 0.0.0.5 2010-11-09
 * Fix bugs with choosing best when next can be worst.
 * Support for ios_base::width field for outputting Objects (don't use for store them).
 * Set code for moving into 1 to avoid using world as part of answer.