@@ -16,6 +16,7 @@ Now
  * Change move format from "( CODE DIRECTION )" to "( CODE . DIRECTION )"
  * Remove ST_STATIC_CHECK.
  * Move run status into CurrentState.
+ * Shutdown Environment::Eval loop.
 
 Version 0.0.0.8 2010-12-05
  * Add support for current state.
